small css fixes for content positioning and card spacing.

--- a/css/MF2main.css
+++ b/css/MF2main.css
@@ -305,7 +305,7 @@ md-toolbar.colorchangeheadersearch {
     padding: 8px;
     border-radius: 2px;
     min-height: 64px;
-    margin-bottom: 6px;
+    margin-bottom: 8px;
 	position: relative;
 	box-sizing: border-box;
 }
@@ -317,7 +317,7 @@ md-toolbar.colorchangeheadersearch {
 	width: calc(50% - 27px);
     float: left;
     height: 48px;
-    border-right: 1px solid rgba(0,0,0,0.12);
+    border-right: 1px dashed rgba(0,0,0,0.12);
 	box-sizing: border-box;
     padding-left: 6px;
 }
@@ -339,10 +339,12 @@ md-toolbar.colorchangeheadersearch {
 .perso-cards-container .perso-card .perso-name {
     font-size: 16px;
     font-weight: 500;
+	position: relative;
 }
 
 .perso-cards-container .perso-card .perso-pagename {
-    margin-top: 6px;
+    margin-top: 7px;
+	position: relative;
 }
 
 .perso-cards-container .perso-card .perso-pagename a {
@@ -356,6 +358,8 @@ md-toolbar.colorchangeheadersearch {
     font-weight: 400;
     color: rgba(0,0,0,0.54);
     margin-left: 24px;
+	position: absolute;
+    right: 16px;
 }
 
 .perso-cards-container .perso-card .perso-status {
@@ -363,6 +367,8 @@ md-toolbar.colorchangeheadersearch {
     font-weight: 400;
     color: rgba(0,0,0,0.54);
     margin-left: 24px;
+	position: absolute;
+    right: 16px;
 }
 
 .perso-cards-container .perso-card .perso-falbackname {
